# nbsearch

./: .copier-answers.yml  .dockerignore  .gitignore  .prettierignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  RELEASE.md  devRequirements.txt  docker-compose.yml  install.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  check-release.yml  e2e-tests.yml  release.yml
example/: 00-add-config.sh  99-run-supervisor.sh  add-config.sh  build-index.sh  config_base.py  config_docker_compose.py  jupyter-lab  jupyter-notebook  jupyter_notebook_config.py  jupyterhub-singleuser  start-solr.sh  supervisor.conf  update-index  update-index.lua
jupyter-config/server-config/: nbsearch.json
nbsearch/: __init__.py  app.py  db.py  extensionapp.py  handlers.py  magics.py  server.py  solr.py  source.py
nbsearch-mcp/: README.md  pyproject.toml
nbsearch-mcp/nbsearch_mcp/: config.py  db.py  notebook.py  server.py
nbsearch/nbextension/: main.css  main.js  nbsearch.yaml  notebook.yaml  tree.js  tree.yaml
nbsearch/templates/: main.html  page.html
nbsearch/tests/: test_api.py  test_handlers.py  test_query.py  test_source.py  utils.py
nbsearch/v1/: handlers.py  query.py
schema/: plugin.json
solr/: Dockerfile
src/: handler.ts  index.ts
src/__tests__/: nbsearch.spec.ts
src/components/: cell-location.tsx  fields-query.tsx  page-control.tsx  page.tsx  query.tsx  result.tsx  results.tsx  search.tsx  solr-query.tsx
src/extensions/: cell.ts  cellmanager.ts  markdown-intervention.ts  (+1 more)
style/: base.css
ui-tests/: package.json
(+44 files in other folders)
