[project]
name = "nbsearch-mcp"
version = "0.1.0"
description = "MCP server for searching and retrieving Jupyter Notebooks via Solr and S3"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "aioboto3>=13.0",
    "cachetools>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
